my-app.css added for formatting

--- a/app/views/test.html
+++ b/app/views/test.html
@@ -1,23 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Our Todo Management App</title>
    <link rel="stylesheet" type="text/css" href="reset.css">
+   <link rel="stylesheet" type="text/css" href="my-app.css">
 </head>
 
 <body>
-   <section>
-      <h1>This is the first HTML page</h1>
-      <h2>An H2 heading</h2>
-      <h3>Typing what I want to show inside the tag</h3>
-      <p>We can place a long text which will be rendered as regular text</p>
-   </section>
-
-   <section>
-      <h1>This is the first HTML page</h1>
-      <h2>An H2 heading</h2>
-      <h3>Typing what I want to show inside the tag</h3>
-      <p>We can place a long text which will be rendered as regular text</p>
-   </section>
+   <h1>My Todo-list</h1>
+   <article>
+      <section>
+         <h2>Due Today</h2>
+         <p>Submit SaaS 201 project</p>
+         <p>Call accountant</p>
+      </section>
+      <section>
+         <h2>Due Tomorrow</h2>
+         <p>Refill groceries</p>
+      </section>
+   </article>
 </body>
 
 </html>
