Added classes to HTML Tags

--- a/app/views/my-app.css
+++ b/app/views/my-app.css
@@ -7,34 +7,30 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
-h1 {
+
+.TodoPage-title{
     font-size: 48px;
     line-height: 1.6;
-    color: #453C52;
+    color: darkred;
 }
 
-h2 {
+.TodoSection-title {
     font-size: 34px;
     line-height: 1.4;
     color: #453C52;
 }
 
-h3 {
-    font-size: 24px;
-    line-height: 1.4;
-    color: #453C52;
-}
-
-p {
+.TodoSection-todo {
     font-size: 20px;
     line-height: 1.2;
     margin-left: 32px;
     color: #453C52;
 }
 
-section {
+.TodoSection {
     margin-bottom: 32px;
     margin-left: 32px;
+    padding: 32px;
 }
 
 /* Typography Scale
