--- a/app/views/test.html
+++ b/app/views/test.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-   <h1>My Todo-list</h1>
+   <h1 class="TodoPage-title">My Todo-list</h1>
    <article>
-      <section>
-         <h2>Due Today</h2>
-         <p>Submit SaaS 201 project</p>
-         <p>Call accountant</p>
+      <section class="TodoSection">
+         <h2 class="TodoSection-title">Due Today</h2>
+         <p class="TodoSection-todo">Submit SaaS 201 project</p>
+         <p class="TodoSection-todo">Call accountant</p>
       </section>
-      <section>
-         <h2>Due Tomorrow</h2>
-         <p>Refill groceries</p>
+      <section class="TodoSection">
+         <h2 class="TodoSection-title">Due Tomorrow</h2>
+         <p class="TodoSection-todo">Refill groceries</p>
       </section>
    </article>
 </body>
