--- a/app/views/test.html
+++ b/app/views/test.html
@@ -10,18 +10,21 @@
 </head>
 
 <body>
-   <h1 class="TodoPage-title">My Todo-list</h1>
-   <article>
-      <section class="TodoSection">
-         <h2 class="TodoSection-title">Due Today</h2>
-         <p class="TodoSection-todo">Submit SaaS 201 project</p>
-         <p class="TodoSection-todo">Call accountant</p>
-      </section>
-      <section class="TodoSection">
-         <h2 class="TodoSection-title">Due Tomorrow</h2>
-         <p class="TodoSection-todo">Refill groceries</p>
-      </section>
-   </article>
+   <main class="TodoPageMain">
+      <img class="SplashImage" src="side-image.jpg" />
+      <article>
+         <h1 class="TodoPage-title">My Todo-list</h1>
+         <section class="TodoSection">
+            <h2 class="TodoSection-title">Due Today</h2>
+            <p class="TodoSection-todo">Submit SaaS 201 project</p>
+            <p class="TodoSection-todo">Call accountant</p>
+         </section>
+         <section class="TodoSection">
+            <h2 class="TodoSection-title">Due Tomorrow</h2>
+            <p class="TodoSection-todo">Refill groceries</p>
+         </section>
+      </article>
 </body>
+</main>
 
 </html>
