Updated database migrations

--- a/app/assets/stylesheets/todo-app.css
+++ b/app/assets/stylesheets/todo-app.css
@@ -81,6 +81,11 @@ body {
     color: #453C52;
 }
 
+.TodoItem-dueDate {
+    font-size: 10px;
+    color: rgb(103, 89,123);
+    margin-left: 10px;
+}
 .TodoItem-Container {
     display: flex;
     padding: 2px 8px;
@@ -94,13 +99,13 @@ body {
 .TodoItem-checkbox {
     width: 16px;
     height: 16px;
+    border-radius: 4px;
+    width: 16px;
 }
 
-.TodoItem-overdueLabel {
-    margin-left: 10px;
-    color: #C53030;
-    font-size: 12px;
-}
+.TodoItem-linethrough{
+    text-decoration: line-through;
+  }
 
 .TodoItem-delete {
     visibility: hidden;
