--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,2 @@
 <p style="font-family: sans-serif; font-weight: 600; font-size: 36px; color: #453C52>Prasad's Todo homepage</p>
+<p> Todos Page : https://prasad-todo-manager-saas-201.herokuapp.com/todos </p>
