Add user sign-in functionality (without session)

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
-<p style="font-family: sans-serif; font-weight: 600; font-size: 36px; color: #453C52>Prasad's Todo homepage</p>
+<h1 class="Home-title">Prasad's Todo homepage</h1>
 
-<p> Todos Page : https://prasad-todo-manager-saas-201.herokuapp.com/todos </p>
+<h3 class="Home-authenticate">
+  If you are a new user, <%= link_to "sign up here", new_user_path %>
+</h3>
+
+<h3 class="Home-authenticate">
+  If you are an existing user, <%= link_to "sign in here", new_sessions_path %>
+</h3>
+
