Added signing-in, updating session,facing off protected routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>  
+    <% if @current_user %>
+       <p class="UserHeader">
+         Welcome  <%= @current_user.first_name %>
+       </p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
