--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,19 +3,23 @@
 <section class="Usersnew">
    <%= form_with url: users_path do |form| %>
     <div class="Form-section">
-      <p class="FormInput-label">User name: </p>
-      <%= form.text_field :user_name, class: "Form-input" %>
+      <p class="FormInput-label">First name: </p>
+      <%= form.text_field :first_name, class: "Form-input" %>
+    </div>
+    <div class="Form-section">
+      <p class="FormInput-label">Last name: </p>
+      <%= form.text_field :last_name, class: "Form-input" %>
     </div>
     <div class="Form-section">
       <p class="FormInput-label">email: </p>
-      <%= form.email_field :user_email, class: "Form-input" %>
+      <%= form.email_field :email, class: "Form-input" %>
     </div>
     <div class="Form-section">
       <p class="FormInput-label">Password: </p>
-      <%= form.password_field :user_password, class: "Form-input" %>
+      <%= form.password_field :password, class: "Form-input" %>
     </div>
     <div class="Form-section">
-      <%= form.submit "Sign-up!", class: "Form-submit" %>
+      <%= form.submit "sign-up!", class: "Form-submit" %>
     </div>
    <% end %>
 </section>
