Add sign-out functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,11 @@
   <body>  
     <% if @current_user %>
        <p class="UserHeader">
-         Welcome  <%= @current_user.first_name %>
+         Welcome <%= @current_user.first_name %>!
+         <%= link_to "Sign-out", destroy_session_path, method: "delete" %>
        </p>
     <% end %>
+
     <%= yield %>
   </body>
 </html>
