Make app secure by scoping all actions to only the currently logged in user

--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -11,19 +11,19 @@
 
    <%= render partial: "todo-section", locals: {
                 section_title: "Overdue",
-                todos: Todo.overdue,
+                todos: @todos.overdue,
                 show_due_date: true,
               } %>
 
    <%= render partial: "todo-section", locals: {
                 section_title: "Due Today",
-                todos: Todo.due_today,
+                todos: @todos.due_today,
                 show_due_date: false,
               } %>
               
    <%= render partial: "todo-section", locals: {
                 section_title: "Due Later",
-                todos: Todo.due_later,
+                todos: @todos.due_later,
                 show_due_date: true,
               } %>
    
