--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,16 @@
 
   <body>  
     <% if @current_user %>
-       <p class="UserHeader">
+       <p class = "UserHeader">
          Welcome <%= @current_user.first_name %>!
          <%= link_to "Sign-out", destroy_session_path, method: "delete" %>
        </p>
+    <% end %>
+
+    <% if flash[:error] %>
+     <p class = "Flash-error">
+       <%= flash[:error] %>
+     </p>
     <% end %>
 
     <%= yield %>
