--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="Home-title">Prasad's Todo homepage</h1>
+<h1 class="Home-title">Welcome to Todo homepage</h1>
 
 <h3 class="Home-authenticate">
   If you are a new user, <%= link_to "sign up here", new_user_path %>
