Complete Todo-User App

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -19,8 +19,8 @@
 
 .Form-submit {
     font-size: 20px;
-    padding: 20px;
-    background-color: #0ea86d20;
+    padding: 10px;
+    background-color: #48BB78;
     border: 0;
     border-radius: 6px;
 }
