--- a/app/assets/stylesheets/todo-app.css
+++ b/app/assets/stylesheets/todo-app.css
@@ -53,6 +53,7 @@ body {
     border: 1px solid transparent;
     padding: 6px 22px;
     border-radius: 4px;
+    border: 0;
 }
 
 .TodoSectionTitle {
